My paper commit

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
 
-	<h1> My Name is Vineet.</h1>
-
+	<h1>My Name is Vineet.</h1>
+  <p> I am a computer science/data science researcher based in Austin aiming to learn more about computer vision-based technologies. I have published in multiple student-based journals.</p>
+  <h2>Research Projects</h2>
+  <h3>Predicting the Severity of Coronavirus Cases Given Demographics and Pre-existing Conditions</h3>
+  <h3>Implementing machine learning algorithms on criminal databases to develop a criminal activity index</h3>
+  <h3>Emission Line-Independent Method to Classify Seyfert Galaxies</h3>
 </body>
