--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h1>My Name is Vineet.</h1>
   <p> I am a computer science/data science researcher based in Austin aiming to learn more about computer vision-based technologies. I have published in multiple student-based journals.</p>
   <h2>Research Projects</h2>
-  <h3>Predicting the Severity of Coronavirus Cases Given Demographics and Pre-existing Conditions</h3>
-  <h3>Implementing machine learning algorithms on criminal databases to develop a criminal activity index</h3>
-  <h3>Emission Line-Independent Method to Classify Seyfert Galaxies</h3>
+  <a href="https://www.jsr.org/hs/index.php/path/article/view/1635"><h3>Predicting the Severity of Coronavirus Cases Given Demographics and Pre-existing Conditions</h3></a>
+  <a href="https://emerginginvestigators.org/articles/22-250"><h3>Implementing machine learning algorithms on criminal databases to develop a criminal activity index</h3></a>
+  <a href="https://bbk12e1-cdn.myschoolcdn.com/ftpimages/319/misc/misc_228068.pdf"><h3>Emission Line-Independent Method to Classify Seyfert Galaxies</h3></a>
 </body>
