--- a/index.html
+++ b/index.html
@@ -20,4 +20,7 @@
   <a href="https://www.jsr.org/hs/index.php/path/article/view/1635"><h3>Predicting the Severity of Coronavirus Cases Given Demographics and Pre-existing Conditions</h3></a>
   <a href="https://emerginginvestigators.org/articles/22-250"><h3>Implementing machine learning algorithms on criminal databases to develop a criminal activity index</h3></a>
   <a href="https://bbk12e1-cdn.myschoolcdn.com/ftpimages/319/misc/misc_228068.pdf"><h3>Emission Line-Independent Method to Classify Seyfert Galaxies</h3></a>
+  <h2>Certifications</h2>
+  <h3>Java Information Technology Specialist Certification by Certiport</h3>
+  <h3>Certified Entry-Level Python Programmer by Python Institute</h3>
 </body>
