--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta charset="UTF-8">
 
 	<title>hello</title>
-
-	<link rel="stylesheet" href="styles.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  
 </head>
 
 <body>
